--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,9 +1,15 @@
+main {
+    padding: 1em;
+}
+
 #posts {
     max-width: 800px;
-    margin: auto;
+    margin: 0 auto;
 }
-.blog-post {
-    border: 1px solid #ccc;
+
+.post {
+    background-color: #fff;
+    border: 1px solid #ddd;
     padding: 1em;
     margin-bottom: 1em;
 }
