--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,22 +2,21 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: white;
-    color: black;
 }
-header, footer {
-    background-color: #333;
+
+header {
+    background-color: #4CAF50;
     color: white;
-    text-align: center;
-    padding: 1em 0;
-}
-main {
     padding: 1em;
+    text-align: center;
 }
-body.dark-mode {
-    background-color: black;
-    color: white;
-}
-header.dark-mode, footer.dark-mode {
-    background-color: #555;
+
+footer {
+    background-color: #f1f1f1;
+    color: #555;
+    padding: 1em;
+    text-align: center;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
 }
